# chat-daily-tg

./: .gitignore  CLAUDE.md  README.md  adversarial-review-2026-06-29.md  deploy.sh  implementation-notes-bilibili.md  implementation-notes-channels-jitter.md  implementation-notes-dedup.md  implementation-notes-growth-mining.md  implementation-notes-r4s-poll-interval.md  implementation-notes-review-fixes.md  implementation-notes-route-table.md  implementation-notes-vibekey-summary.md  implementation-notes-vision-observability.md  implementation-notes-wake-gate.md  implementation-notes-yihong-keji-personalize.md  implementation-notes-youtube.md  implementation-notes.md  pyproject.toml  run_channel_daily.py  run_daily.py  schedule.yaml
docs/: ARCHITECTURE.md  kimi-setup.md  research-loop.md  runbook.md  schedule-designer.html
launchd/: com.apple.wx-daily-tg.plist  com.chat-daily-tg-channel.agent.plist  com.chat-daily-tg.agent.plist  com.chat-daily-tg.bilibili.plist  com.chat-daily-tg.channels.plist  com.chat-daily-tg.disablesleep.plist  com.chat-daily-tg.growth-weekly.plist  com.chat-daily-tg.growth.plist  com.chat-daily-tg.ledger-sync.plist  com.wx-daily-tg.agent.plist
scripts/: calibrate_topic_dedup.py  due_gate.sh  guard_common.sh  install-launchd.sh  measure_cross_producer_dup.py  migrate_jsonl_to_sqlite.py  power_aware_disablesleep.sh  research_loop.py  run_bilibili_guarded.sh  run_bilibili_r4s.sh  run_channels_guarded.sh  run_daily_guarded.sh  run_growth_guarded.sh  run_growth_weekly_guarded.sh  run_ledger_sync_guarded.sh  run_youtube_r4s.sh  schedule.py  sync_media_ledger.sh  sync_tg_targets.sh  tg_media_dump.py  weekly_media_rules_review.py
tests/: conftest.py  test_archive.py  test_bilibili_digest.py  test_bilibili_fetcher.py  test_card_renderer.py  test_channel_daily.py  test_cli.py  test_config.py  test_content_seen.py  test_context_builder.py  test_cross_group_cluster.py  test_db.py  test_death_signals.py  test_dedup.py  test_dedup_journal.py  test_env.py  test_evidence_index.py  test_fingerprint.py  test_growth_cards.py  test_growth_miner.py  test_growth_store.py  test_growth_weekly.py  test_health_briefing.py  test_hot_leads.py  test_img_relay.py  test_llm_client.py  test_logging_setup.py  (+24 more)
(+101 files in other folders)
