[project]
name = "chat-daily-tg"
version = "0.3.0"
description = "Daily multi-source chat summary to Telegram with local archive"
requires-python = ">=3.11"
dependencies = [
    # [socks] pulls in socksio so httpx.Client() can build a transport for a
    # socks5:// proxy (ALL_PROXY from Shadowrocket) instead of crashing at
    # construction with ImportError — the 2026-07-03 exit=1 failure.
    "httpx[socks]>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "tenacity>=8.2",
    "pillow>=12.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
